--- a/Task-1/coke.css
+++ b/Task-1/coke.css
@@ -1,4 +1,4 @@
- {
+body {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
@@ -43,14 +43,21 @@ nav ul li a {
     font-size: 15px;
     font-weight: 600;
 }
+
+a:hover {
+    color: #d52b2b; 
+    transition: .2s ease-in-out;
+    transform: scale(1.5);
+}
+
 #btn1 {
     text-transform: uppercase;
     background: black;
     border-radius: 30px;
     cursor: pointer;
-    color: rgb(195, 6, 6);
+    color: white;
     font-family: 'Poppins', sans-serif;
-    font-size: 19px;
+    font-size: 17px;
     font-weight: 700;
     padding: 12px 20px;
     margin: 10px;
@@ -62,7 +69,7 @@ nav ul li a {
     background: black;
     border-radius: 30px;
     cursor: pointer;
-    color: rgb(195, 6, 6);
+    color: white;
     font-family: 'Poppins', sans-serif;
     font-size: 17px;
     font-weight: 700;
@@ -71,11 +78,31 @@ nav ul li a {
     text-decoration: none;
     box-shadow: 1px 4px 12px rgba(94,28,68,.15);
 }
+#btn3 {
+    background: linear-gradient(to bottom, #393737 2%, rgb(118, 113, 113) 100%);
+    margin-top: 60px;
+    margin-left: 140px;
+    padding: 15px 30px;
+    text-align: center;
+    transition: background-color 0.5s ease-in-out; 
+    border: none;
+    outline: none; 
+    text-transform: uppercase;
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 30px;
+    box-shadow: 1px 4px 12px rgba(94,28,68,.15);
+    cursor: pointer ;
+}
+
 .btn:hover {
     box-shadow: 3px 8px 22px rgba(94,28,68,.15);
     transform: scale(1.1);
     transition: .2s ease-in-out;
 }
+
+
 .content {
     position: relative;
     display: flex;
@@ -107,28 +134,8 @@ nav ul li a {
     margin-top: 40px;
     color: #8c8484;
  }
-#btn3 {
-    background: linear-gradient(to bottom, #393737 2%, rgb(118, 113, 113) 100%);
-    margin-top: 60px;
-    margin-left: 140px;
-    padding: 15px 30px;
-    text-align: center;
-    transition: background-color 0.5s ease;
-    border: none;
-    outline: none;
-    text-transform: uppercase;
-    color: white;
-    font-size: 20px;
-    font-weight: 700;
-    border-radius: 30px;
-    box-shadow: 1px 4px 12px rgba(94,28,68,.15);
-}
 
-.btn3:hover {
-    box-shadow: 3px 8px 22px rgba(94,28,68,.15);
-    transform: scale(1.1);
-    transition: .2s ease-in-out;
-}
+
 
 .coca {
     display: flex;
@@ -143,10 +150,10 @@ nav ul li a {
     max-width : 60%
 }
 #coke:hover {
-    /* Start the shake animation and make the animation last for 0.5 seconds */
+    
     animation: shake 0.5s;
   
-    /* When the animation is finished, start again */
+    
     animation-iteration-count: infinite;
   }
   
