--- a/Task-3/temp.css
+++ b/Task-3/temp.css
@@ -5,7 +5,7 @@
 
 body {
   color: var(--secondary-color);
-  background-image: url("image/bg.webp");
+  background-image: url("./image/bg.webp");
   /* background-color: black ; */
 }
 
